--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,22 @@
 {
 	"manifest_version": 2,
-	"name": "Amazon UK (amazon.co.uk) Search",
-	"description": "Amazon.co.uk Search (copied from Mozilla version 1.13)",
+	"name": "Amazon India (amazon.in) Search",
+	"description": "Amazon.in Search (copied from Mozilla version 1.13)",
 	"version": "0.1",
-	"browser_specific_settings": {
-		"gecko": {
-			"id": "amazon_co_uk_search@jeffersonscher.com"
-		}
+	
 	},
 	"icons": {
 		"32": "favicon.ico.png"
+
 	},
 	"web_accessible_resources": ["favicon.ico"],
 	"chrome_settings_overrides": {
 		"search_provider": {
 			"keyword": "@amazon",
-			"name": "Amazon.co.uk",
-			"search_url": "https://www.amazon.co.uk/s",
-			"search_form": "https://www.amazon.co.uk/",
+			"name": "Amazon.in",
+			"search_url": "https://www.amazon.in/s",
+			"search_form": "https://www.amazon.in/",
 			"search_url_get_params": "k={searchTerms}"
 		}
-	},
-	"developer": {
-		"name": "Jefferson \"jscher2000\" Scher",
-		"url": "https://github.com/jscher2000/"
 	}
 }
