--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,23 @@
 {
-	"manifest_version": 2,
-	"name": "Amazon India (amazon.in) Search",
-	"description": "Amazon.in Search (copied from Mozilla version 1.13)",
-	"version": "0.1",
-	
-	},
-	"icons": {
+  "name": "Amazon India Search",
+  "description": "Tab search Amazon India",
+  "manifest_version": 2,
+  "version": "0.1",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "amazon_india@varsedile"
+    }
+  },
+  "icons": {
 		"32": "favicon.ico.png"
-
 	},
-	"web_accessible_resources": ["favicon.ico"],
-	"chrome_settings_overrides": {
-		"search_provider": {
-			"keyword": "@amazon",
-			"name": "Amazon.in",
-			"search_url": "https://www.amazon.in/s",
-			"search_form": "https://www.amazon.in/",
-			"search_url_get_params": "k={searchTerms}"
-	}
+  "hidden": true,
+  "chrome_settings_overrides": {
+    "search_provider": {
+      "keyword": "@amazon",
+      "name": "Amazon India Search",
+      "search_url": "https://www.amazon.in/s",
+      "search_url_get_params": "k={searchTerms}"
+    }
+  }
 }
